Mise à Jour du générateur de JAR MàJ de la durée des Bonus Migration de l'affichage et de la suppression d'éléments du Snake